--- a/templates/wizard/wizard_base.html
+++ b/templates/wizard/wizard_base.html
@@ -1,18 +1,17 @@
+<!-- templates/wizard/wizard_base.html -->
 {% extends "base.html" %}
-
 {% load static %}
 
-{% block head %}
-  <!-- Paper Dashboard CSS -->
-  <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
-  <link href="{% static 'css/paper-dashboard.css?v=2.1.1' %}" rel="stylesheet" />
-  <!-- Optional demo CSS (omit in production) -->
+{% block extra_css %}
+  {{ block.super }}
+  <!-- demo overrides -->
   <link href="{% static 'css/demo.css' %}" rel="stylesheet" />
 {% endblock %}
 
 {% block content %}
 <div class="content">
-  <div class="col-md-10 mr-auto ml-auto">
+  <div><p>This is a test</p></div>
+  <div class="col-md-10 mx-auto">
     <div class="wizard-container">
       <div class="card card-wizard" data-color="primary" id="wizardSync">
         <form id="sync-wizard-form" method="post" action="{% url 'wizard_main' %}">
@@ -22,18 +21,18 @@
             <h3 class="card-title">Canvas Group to Core Team Sync</h3>
             <h5 class="description">Follow the steps to complete synchronization</h5>
             <div class="wizard-navigation">
-              <ul>
+              <ul class="nav nav-pills">
                 {% for label in progress_labels %}
-                <li class="nav-item">
-                  <a class="nav-link {% if forloop.counter == current_step %}active{% endif %}"
-                     href="#step{{ forloop.counter }}"
-                     data-toggle="tab"
-                     role="tab"
-                     aria-controls="step{{ forloop.counter }}"
-                     aria-selected="{% if forloop.counter == current_step %}true{% else %}false{% endif %}">
-                    {{ label }}
-                  </a>
-                </li>
+                  <li class="nav-item">
+                    <a class="nav-link {% if forloop.counter == current_step %}active{% endif %}"
+                       href="#step{{ forloop.counter }}"
+                       data-bs-toggle="tab"
+                       role="tab"
+                       aria-controls="step{{ forloop.counter }}"
+                       aria-selected="{% if forloop.counter == current_step %}true{% else %}false{% endif %}">
+                      {{ label }}
+                    </a>
+                  </li>
                 {% endfor %}
               </ul>
             </div>
@@ -48,7 +47,7 @@
 
           <!-- Footer Buttons -->
           <div class="card-footer">
-            <div class="pull-left">
+            <div class="float-start">
               <button type="button"
                       id="previous-btn"
                       class="btn btn-previous btn-fill btn-default btn-wd"
@@ -56,40 +55,43 @@
                 Previous
               </button>
             </div>
-            <div class="pull-right">
+            <div class="float-end">
               {% if current_step < progress_labels|length %}
-              <button type="button"
-                      id="next-btn"
-                      class="btn btn-next btn-fill btn-primary btn-wd"
-                      {% if not next_enabled %}disabled{% endif %}>
-                Next
-              </button>
+                <button type="button"
+                        id="next-btn"
+                        class="btn btn-next btn-fill btn-primary btn-wd"
+                        {% if not next_enabled %}disabled{% endif %}>
+                  Next
+                </button>
               {% else %}
-              <button type="submit"
-                      id="finish-btn"
-                      class="btn btn-finish btn-fill btn-primary btn-wd">
-                Finish
-              </button>
+                <button type="submit"
+                        id="finish-btn"
+                        class="btn btn-finish btn-fill btn-primary btn-wd">
+                  Finish
+                </button>
               {% endif %}
             </div>
             <div class="clearfix"></div>
           </div>
         </form>
       </div>
-    </div> <!-- wizard-container -->
+    </div>
   </div>
 </div>
 {% endblock %}
 
-{% block scripts %}
-  <!-- Core JS -->
-  <script src="{% static 'js/core/jquery.min.js' %}"></script>
-  <script src="{% static 'js/core/popper.min.js' %}"></script>
-  <script src="{% static 'js/core/bootstrap.min.js' %}"></script>
+{% block extra_js %}
+  {{ block.super }}
+  <!-- jQuery (needed by bootstrap-wizard) -->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+  <!-- Bootstrap 5 bundle (includes Popper) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
   <!-- Wizard plugin -->
   <script src="{% static 'js/plugins/jquery.bootstrap-wizard.js' %}"></script>
   <!-- Form validation -->
   <script src="{% static 'js/plugins/jquery.validate.min.js' %}"></script>
-  <!-- Custom wizard JavaScript -->
+  <!-- Your custom wizard logic -->
   <script src="{% static 'js/wizard.js' %}"></script>
 {% endblock %}
