--- a/templates/wizard/step_6_results.html
+++ b/templates/wizard/step_6_results.html
@@ -1,8 +1,8 @@
-<div class="tab-pane show active" id="step6">
+<div class="tab-pane fade" id="step6" role="tabpanel">
   <h5 class="info-text">Step 6: Results</h5>
   
   <div class="row">
-    <div class="col-md-10 ml-auto mr-auto">
+    <div class="col-md-10 mx-auto">
       <div class="alert alert-success">
         <p><strong>Success!</strong> Teams have been created successfully.</p>
       </div>
@@ -26,19 +26,19 @@
                 <tr>
                   <td>Project Team 1</td>
                   <td>4 members</td>
-                  <td><span class="badge badge-success">Created</span></td>
+                  <td><span class="badge bg-success">Created</span></td>
                   <td><a href="#">CS101-Team1</a></td>
                 </tr>
                 <tr>
                   <td>Project Team 2</td>
                   <td>4 members</td>
-                  <td><span class="badge badge-success">Created</span></td>
+                  <td><span class="badge bg-success">Created</span></td>
                   <td><a href="#">CS101-Team2</a></td>
                 </tr>
                 <tr>
                   <td>Project Team 3</td>
                   <td>4 members</td>
-                  <td><span class="badge badge-success">Created</span></td>
+                  <td><span class="badge bg-success">Created</span></td>
                   <td><a href="#">CS101-Team3</a></td>
                 </tr>
               </tbody>
