feat: transition from mock data to db hookup

--- a/templates/wizard/step_4_integration_config.html
+++ b/templates/wizard/step_4_integration_config.html
@@ -15,7 +15,7 @@
         <div class="card-body">
           <div class="mb-3">
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" name="create_github_repo" value="1" id="create_github_repo">
+              <input class="form-check-input" type="checkbox" name="create_github_repo" value="1" id="create_github_repo" style="width: 20px; height: 20px; margin-right: 10px; visibility: visible !important; opacity: 1 !important;">
               <label class="form-check-label" for="create_github_repo">
                 Create GitHub repositories for each team
               </label>
@@ -24,7 +24,7 @@
           
           <div class="mb-3">
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" name="setup_project_management" value="1" id="setup_project_management">
+              <input class="form-check-input" type="checkbox" name="setup_project_management" value="1" id="setup_project_management" style="width: 20px; height: 20px; margin-right: 10px; visibility: visible !important; opacity: 1 !important;">
               <label class="form-check-label" for="setup_project_management">
                 Set up project management boards
               </label>
