--- a/templates/wizard/step_5_confirmation.html
+++ b/templates/wizard/step_5_confirmation.html
@@ -24,6 +24,10 @@
                   <td id="summary-group-sets">No group sets selected</td>
                 </tr>
                 <tr>
+                  <th>Teams to Create:</th>
+                  <td><span id="summary-teams-count">0</span> teams</td>
+                </tr>
+                <tr>
                   <th>Selected Groups:</th>
                   <td id="summary-groups">No groups selected</td>
                 </tr>
@@ -53,7 +57,7 @@
       
       <div class="mb-3">
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" name="confirmed" value="1" required id="confirm_checkbox">
+          <input class="form-check-input" type="checkbox" name="confirmed" value="1" required id="confirm_checkbox" style="width: 20px; height: 20px; margin-right: 10px; visibility: visible !important; opacity: 1 !important;">
           <label class="form-check-label" for="confirm_checkbox">
             I confirm that I want to create these teams based on the Canvas groups
           </label>
