--- a/static/css/components/forms.css
+++ b/static/css/components/forms.css
@@ -86,8 +86,8 @@
 }
 
 .form-check-input {
-  width: 1.25em;
-  height: 1.25em;
+  width: 1.25em !important;
+  height: 1.25em !important;
   margin-top: 0.125em;
   margin-left: -1.75em;
   vertical-align: top;
@@ -97,6 +97,8 @@
   background-size: contain;
   border: var(--gb-input-border-width) solid var(--gb-border-medium);
   appearance: none;
+  visibility: visible !important;
+  opacity: 1 !important;
 }
 
 .form-check-input[type="checkbox"] {
